# puppet

./: Cargo.toml  LICENSE  README.md
puppet-derive/: Cargo.toml
puppet-derive/src/: generics_processor.rs  handler.rs  lib.rs  utils.rs
src/: lib.rs
tests/: basic.rs  custom_executor.rs  deferred_replies.rs  generics.rs  named.rs
