[package]
name = "puppet"
version = "0.1.0"
description = "A simple actor framework which uses no dynamic dispatch or boxing."
keywords = ["actor", "async", "tokio"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChillFish8/puppet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
flume = "0.10.14"

tokio = { version = "1", default-features = false, features = ["rt"] }

puppet-derive = { path = "puppet-derive", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "puppet-derive",
]