[package]
name = "puppet"
version = "0.3.0"
description = "A simple actor framework which uses no dynamic dispatch or boxing."
keywords = ["actor", "async", "tokio"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChillFish8/puppet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
flume = "0.10.14"

tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }
puppet-derive = { path = "puppet-derive", version = "0.2.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
helper-methods = ["tokio", "puppet-derive/helper-methods"]
default = ["helper-methods"]

[workspace]
members = [
    "puppet-derive",
]