[package]
name = "puppet-derive"
version = "0.1.0"
authors = ["ChillFish8 <hburt2003@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
crossbeam-queue = "0.3.8"
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
darling = "0.14.2"