[package]
name = "puppet-derive"
version = "0.3.0"
authors = ["ChillFish8 <hburt2003@gmail.com>"]
description = "The proc-macro for the puppet actor framework."
edition = "2018"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ChillFish8/puppet"

[lib]
proc-macro = true

[dependencies]
crossbeam-queue = "0.3.8"
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
darling = "0.14.2"

[features]
custom-executor = []
helper-methods = []